syntax = "proto3";

option java_package = "co.ledger.lama.bitcoin.interpreter.protobuf";

import "google/protobuf/timestamp.proto";

package pb.v1;

enum OperationType {
  SENT = 0;
  RECEIVED = 1;
}

enum ChangeType {
  EXTERNAL = 0; // normal addresses
  INTERNAL = 1; // change addresses
}

message Operation {
  bytes account_id = 1;
  string hash = 2;
  TransactionView transaction = 3;
  OperationType operation_type = 4;
  string value = 5;
  string fees = 6;
  google.protobuf.Timestamp time = 7;
  int64 block_height = 8;
}

message TransactionView {
  string id = 1;
  string hash = 2;
  google.protobuf.Timestamp received_at = 3;
  int64 lock_time = 4;
  string fees = 5;
  repeated InputView inputs = 6;
  repeated OutputView outputs = 7;
  BlockView block = 8;
  int32 confirmations = 9;
}

message InputView {
  string output_hash = 1;
  int32 output_index = 2;
  int32 input_index = 3;
  string value = 4;
  string address = 5;
  string script_signature = 6;
  repeated string txinwitness = 7;
  int64 sequence = 8;
  repeated uint32 derivation = 9;
}

message OutputView {
  int32 output_index = 1;
  string value = 2;
  string address = 3;
  string script_hex = 4;
  ChangeType change_type = 5;
  repeated uint32 derivation = 6;
}

message Utxo {
  string transaction_hash = 1;
  int32 output_index = 2;
  string value = 3;
  string address = 4;
  string script_hex = 5;
  ChangeType change_type = 6;
  repeated uint32 derivation = 7;
  google.protobuf.Timestamp time = 8;
  bool usedInMempool = 9;
}

message BlockView {
  string hash = 1;
  int64 height = 2;
  google.protobuf.Timestamp time = 3;
}

message AccountAddress {
  string account_address = 1;
  ChangeType change_type = 2;
  repeated int32 derivation = 3;
}

message CurrentBalance {
  string balance = 1;
  int32 utxos = 2;
  string received = 3;
  string sent = 4;
  string unconfirmed_balance = 5;
}

message BalanceHistory {
  bytes account_id = 1;
  string balance = 2;
  int64 block_height = 3;
  google.protobuf.Timestamp time = 4;
}

